# mcp-garmin

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  pyproject.toml
.github/: labeler.yaml  labels.yaml  release-please-config.json  renovate.json5
.github/workflows/: charts-test-deployment.yaml  meta-labeler.yaml  meta-sync-labels.yaml  release-containers.yaml  release-helm-charts.yaml  renovate-dry-run.yaml  renovate-schedule.yaml
containers/mcp-garmin/: Dockerfile
src/mcp_garmin/: __init__.py  client.py  init.py  server.py
