[project]
name = "mcp-garmin"
version = "0.1.0"
description = "MCP server for Garmin Connect health & fitness API"
authors = [{ name = "Kien N", email = "contact@kien.cc" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "garminconnect>=0.2.20",
]

[project.scripts]
mcp-garmin = "mcp_garmin.server:main"
mcp-garmin-sse = "mcp_garmin.server:main_sse"
mcp-garmin-http = "mcp_garmin.server:main_http"
mcp-garmin-init = "mcp_garmin.init:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_garmin"]
